style(CompileGraph): code refinements